# demo

./: .env  .env.example  .gitignore  README.md  pyproject.toml
artifacts/runs/eadda5d4c4904de280377920c53295f6/: run_metadata.json
biaseval/: __init__.py  pipeline.py  run.py  schema.py
biaseval.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
biaseval/analysis/: __init__.py  counterfactual.py  representation.py  stereotype.py
biaseval/dashboard/: __init__.py  app.py
biaseval/data/: __init__.py
biaseval/llm/: __init__.py  gemini_client.py  huggingface_client.py  openai_client.py
biaseval/metrics/: __init__.py  aggregate.py
biaseval/preprocess/: __init__.py
biaseval/utils/: __init__.py
biaseval/validation/: __init__.py  kappa.py  stats.py  validate_prompts.py
biaseval/viz/: __init__.py
config/: experiments.yaml  weights.yaml
data/: manual_labels.csv
data/prompts/: base_prompts.csv  base_prompts.json
data/validation/: kappa_report.json  validation_report.json  validation_report.md
